--- a/index.html
+++ b/index.html
@@ -9,5 +9,20 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!--
+      This is a playground for the View Transitions API.
+      You can edit the CSS below to see how it affects the transitions.
+      The CSS is scoped to this document, so you can use any selectors you like.
+      The styles will be applied to the elements inside the <body> tag.
+    -->
+    <style class="playground" contenteditable>
+      ::view-transition-new(slideUp) {
+        animation: slide-in 0.5s ease-in-out;
+      }
+      ::view-transition-old(slideUp) {
+        animation: slide-out 0.5s ease-in-out;
+      }
+    </style>
   </body>
 </html>
