--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       }
       ::view-transition-old(slideUp) {
         animation: slide-out 0.5s ease-in-out;
+        /* animation-delay: 0.5s; */
       }
     </style>
   </body>
