--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       The CSS is scoped to this document, so you can use any selectors you like.
       The styles will be applied to the elements inside the <body> tag.
     -->
+    <!-- ! Fonttia suuremmaksi -->
     <style
       class="playground"
       contenteditable
