--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-    <!--
-      This is a playground for the View Transitions API.
-      You can edit the CSS below to see how it affects the transitions.
-      The CSS is scoped to this document, so you can use any selectors you like.
-      The styles will be applied to the elements inside the <body> tag.
-    -->
-    <!-- ! Fonttia suuremmaksi -->
+    <!-- The Playground -->
     <style
       class="playground"
       contenteditable
